# ML-Guided-MIP---Ukraine-Medical-Logistics-

./: .gitignore  main.py  pyproject.toml  test.ipynb  test2.ipynb  test3.ipynb  test4.ipynb  test5.ipynb  test_gurobi.ipynb
.mplconfig/: fontlist-v390.json
attack_scenarios/: __init__.py  __main__.py  config.py  config.yaml  geometry.py  io.py  model.py  pipeline.py  visualization.py
examples/: build_test4_synthetic.py
mip/: __init__.py  costs.py  data.py  enrichment.py  scenarios.py  solution.py  viz.py
mip/models/: __init__.py  deterministic.py  robust.py  warm_start.py
ml/: __init__.py  training.py
notebooks/: phase1_baseline.ipynb
notebooks/archive/: test.ipynb  test2.ipynb  test3.ipynb  test4.ipynb  test5.ipynb  test_gurobi.ipynb
synthetic_data/: __init__.py  __main__.py  coarsen.py  config.py  config.yaml  costs.py  demand.py  occupied.py  pipeline.py  raw_graph.py  utils.py  visualization.py
